# BIBhelper

./: .dockerignore  .gitignore  AIAHelper_需求规格说明书.md  AIAHelper_项目立项文档.md  README.md  aia.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
apps/: __init__.py
apps/cli/: __init__.py  main.py
apps/service/: __init__.py
apps/service/app/: __init__.py  main.py
apps/service/static/: styles.css
apps/service/templates/: base.html  job_detail.html  jobs.html  login.html  template_detail.html  templates.html  upload.html
deploy/: .env.example  Dockerfile  docker-compose.ghcr.yml  docker-compose.yml
skills/bibhelper-service/: SKILL.md
skills/bibhelper-service/agents/: openai.yaml
skills/bibhelper-service/references/: api-auth.md  system.md
templates/: template_savings_comparison.docx  template_savings_standalone.docx
tests/: test_aia.py
